--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.71",
+		"@sveltejs/adapter-static": "^1.0.0-next.38",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^8.16.0",
